[project]
name = "cczusnap"
version = "0.1.0"
description = ""
authors = [{ name = "H2Sxxa", email = "h2sxxa0w0@gmail.com" }]
dependencies = [
    "aiohttp",
    "logng==0.1.3",
    "lxml",
    "Remilia @ git+https://github.com/H2Sxxa/Remilia.git@v1.4.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
